Shake and expand transition buttons in main activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <com.example.mylibrary.TransitionButton
+        android:id="@+id/transitionShakeBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Shake"
+        app:layout_constraintBottom_toTopOf="@id/transitionExpandBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.example.mylibrary.TransitionButton
+        android:id="@+id/transitionExpandBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Expand Transition"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/transitionShakeBtn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
